# vision-pt

./: README.md  pyproject.toml
configs/jit/x-loss/: config.yml  preview.yml
scripts/data/: dl_parquet.sh
scripts/train/jit/: arb_class_to_image.sh  arb_class_to_image_ujit.sh  class_to_image.sh  class_to_image_cross.sh  class_to_image_ig.sh  class_to_image_loig.sh  class_to_image_tread.sh  class_to_image_ujit.sh
src/: config.py
src/dataset/: aspect_ratio_bucket.py  square_class_image.py  tags.py  text_to_image.py
src/models/jit/: README.md  __init__.py  class_encoder.py  config.py  denoiser.py  pipeline.py  text_encoder.py
src/models/jit/extension/: cross.py  ig.py  loig.py  pope.py  uvit.py
src/modules/: norm.py
src/modules/loss/: perceptual.py
src/trainer/: common.py
src/utils/: grid.py
tests/: test_dataset.py  test_peft.py
tests/libraries/: test_optimum_quanto.py
tests/models/: test_jit.py
tests/modules/: test_loss_perceptual.py  test_norm.py
tools/data/: create_buckets_cache.py  create_label2id.py  create_label2id_sfw.py  dl_safebooru_parquet.py
tools/model/: expand_patch_embed.py  inspect_weights.py
tools/visualize/: images_to_gif.py
train/jit/: arb_class_to_image.py  arb_class_to_image_ujit.py  class_to_image.py  class_to_image_cross.py  class_to_image_ig.py  class_to_image_loig.py  class_to_image_tread.py  class_to_image_ujit.py
