[project]
name = "vision-pt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.6,<2.8",
    "torchvision>=0.20",
    "safetensors>=0.4.5",
    "hf-transfer>=0.1.8",
    "wandb>=0.19.1",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "lightning>=2.5.0.post0",
    "pydantic>=2.10.4",
    "transformers>=4.47.1",
    "datasets>=3.2.0",
    "webdataset>=0.2.100",
    "torchmetrics>=1.6.0",
    "bitsandbytes>=0.45.0",
    "sentencepiece>=0.2.0",
    "accelerate>=1.2.1",
    "torchao>=0.7.0",
    "imagesize>=1.4.1",
    "cheesechaser>=0.2.2",
    "polars>=1.23.0",
    "huggingface-hub>=0.29.1",
    "einops>=0.8.1",
    "timm>=1.0.15",
    "hf-xet>=1.0.3",
    "opencv-python>=4.12.0.88",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.8.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "fire>=0.7.0",
    "huggingface-dl",
    "click>=8.1.7",
    "litserve>=0.2.5",
    "gradio>=5.9.1",
    "seaborn>=0.13.2",
    "ty>=0.0.1a7",
]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "schedulefree"
requires-dist = ["setuptools", "wheel"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["setuptools", "wheel"]

[project.optional-dependencies]
build = ["setuptools", "wheel"]
compile = ["schedulefree", "diffusers"]
flash-attn = ["flash-attn<2.8.0"]
quanto = ["optimum-quanto"]             # to avoid Zero GPU issues
triton = ["triton"]
xformers = ["xformers"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu128", marker = "platform_system != 'Darwin'" },
]
huggingface-dl = { git = "https://github.com/p1atdev/huggingface_dl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.ty.src]
root = "./src"
